--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-i18next": "^11.16.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-toggle-dark-mode": "^1.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
