--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-REACT_APP_ENV_BACKEND_API='http://localhost:8000/api/'
-REACT_APP_ENV_IMAGE='http://localhost:8000/storage/'
+REACT_APP_ENV_BACKEND_API='http://127.0.0.1:8000/api/'
+REACT_APP_ENV_IMAGE='http://127.0.0.1:8000/storage/'
 
